<resources>
    <string name="app_name">RPSC</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="snolabel">"S. No. : "</string>
    <string name="datelabel">"Date : "</string>
    <string name="examnamelabel">"Exam Name : "</string>
    <string name="papernotelabel">"Paper Note Title : "</string>
    <string name="advertisementlabel">"Advertisement Title : "</string>
    <string name="inet_conn_msg">"Please connect to working Internet connection."</string>

    <string name="pdf_show_local_progress_title">"Downloading pdf"</string>
    <string name="pdf_show_local_progress_content">"Content Downloading"</string>
    <string name="pdf_show_online_dialog_title">"PDF Download."</string>
    <string name="pdf_show_online_dialog_question">"Are you sure ?"</string>
    <string name="pdf_show_online_dialog_button_no">"No"</string>
    <string name="pdf_show_online_dialog_button_yes">"Yes"</string>

    <string name="Processing_Message">Loading...\n\nThis may take bit of time.</string>















    <style name="ActionBarCompat">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">50dp</item>
        <item name="android:orientation">horizontal</item>
        <item name="android:background">@drawable/actionbar_background</item>
    </style>

    <style name="DashboardButton">
        <item name="android:layout_gravity">center_vertical</item>
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:gravity">center_horizontal</item>
        <item name="android:drawablePadding">2dp</item>
        <item name="android:textSize">16dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textColor">#ffeaece9</item>
        <item name="android:background">@null</item>
    </style>

    <style name="FooterBar">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">40dp</item>
        <item name="android:orientation">horizontal</item>
        <item name="android:background">#dedede</item>
    </style>

    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-2426832232757885/9495560437</string>
    <string name="banner_ad_unit_id">ca-app-pub-2426832232757885/3947907638</string>

    <!--Test ID -->
    <!--    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->


    <string name="menu_share">Share</string>
    <string name="menu_search">Search</string>


</resources>
